# finforge

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
.venv311/: pyvenv.cfg
examples/: basic_generation.py  basic_generation2.py  behavioral_generation.py  test_all_personas.py
finforge/: __init__.py  dataset.py
finforge/behavior/: __init__.py  adaptive_spending.py  balance_awareness.py  budgeting.py  clustering.py  identity.py  lifecycle.py  merchant_affinity.py  overdraft.py  sessions.py  spending_patterns.py  subscriptions.py
finforge/core/: config.py  constants.py  enums.py  models.py
finforge/exporters/: __init__.py  csv_exporter.py
finforge/generators/: __init__.py  scheduler.py  transaction_generator.py  user_generator.py
finforge/llm/: __init__.py  interfaces.py
finforge/merchants/: __init__.py  catalog.py
finforge/personas/: __init__.py  base.py  salaried.py  student.py
finforge/utils/: balances.py  dates.py  randomness.py
tests/: test_balances.py  test_behavior.py  test_generation.py  test_identity.py  test_personas.py  test_seed_reproducibility.py
